--- a/app/src/main/res/layout/activity_algoritma_bahcesi_button1_7.xml
+++ b/app/src/main/res/layout/activity_algoritma_bahcesi_button1_7.xml
@@ -51,14 +51,15 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
-        android:ems="10"
-        android:hint="  Yazmaya başla"
         android:background="@drawable/elips"
-        android:textColorHint="#ffffff"
+        android:ems="10"
+
+        android:hint="  Yazmaya başla"
+        android:inputType="textPersonName"
 
         android:textColor="@color/colorAccent"
+        android:textColorHint="@color/colorAccent"
         android:textSize="16sp"
-        android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/btnCalistirAlgo1_7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -90,9 +91,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="32dp"
         android:background="@drawable/elips_button"
-        android:textColor="@color/colorPrimary"
         android:onClick="devamAlgo1_7"
         android:text="DEVAM"
+        android:textColor="@color/colorPrimary"
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
