--- a/app/src/main/res/layout/activity_algoritma_bahcesi_button7_6.xml
+++ b/app/src/main/res/layout/activity_algoritma_bahcesi_button7_6.xml
@@ -62,7 +62,7 @@
 
     <EditText
         android:id="@+id/edCevapAlgo7_6"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
@@ -70,7 +70,6 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips"
         android:ems="10"
-        android:gravity="center|center_horizontal|center_vertical"
         android:hint="\t \t Yazmaya başla"
         android:inputType="textPersonName"
         android:textColor="@color/colorAccent"
