--- a/app/src/main/res/layout/activity_algoritma_bahcesi_button1_1.xml
+++ b/app/src/main/res/layout/activity_algoritma_bahcesi_button1_1.xml
@@ -12,7 +12,7 @@
 
     <TextView
         android:id="@+id/textView22"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
