--- a/app/src/main/res/layout/activity_algoritma_bahcesi_button3_3.xml
+++ b/app/src/main/res/layout/activity_algoritma_bahcesi_button3_3.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/algos3"
     android:layout_height="match_parent"
+    android:background="@drawable/algos3"
     tools:context=".AlgoritmaBahcesi3.AlgoritmaBahcesiButton3_3">
 
     <Button
@@ -15,9 +15,9 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="32dp"
+        android:background="@drawable/elips_button"
         android:onClick="devamAlgo3_3"
         android:text="DEVAM"
-        android:background="@drawable/elips_button"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,7 +35,7 @@
         android:layout_marginBottom="16dp"
         android:background="@drawable/elips"
         android:gravity="center|center_horizontal|center_vertical"
-        android:text="\n lakap = Efsane \n Goster(Efsane) \n"
+        android:text="\n lakap = Efsane \n Goster(lakap) \n"
         android:textColor="@color/colorAccent"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/textView83"
@@ -69,12 +69,12 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:textColorHint="@color/colorAccent"
-        android:hint="  Yazmaya başla"
         android:background="@drawable/elips"
+        android:ems="10"
+        android:hint="  Yazmaya başla"
+        android:inputType="textPersonName"
         android:textColor="@color/colorAccent"
+        android:textColorHint="@color/colorAccent"
 
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/btnCalistirAlgo3_3"
@@ -88,12 +88,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/elips_button"
-        android:textColor="@color/colorPrimary"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/elips_button"
         android:onClick="calistirAlgo3_3"
         android:text="ÇALIŞTIR"
+        android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/btnDevamAlgo3_3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
