--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -53,6 +53,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/elips"
+        android:onClick="signUpButton"
         android:text="𝑺𝑰𝑮𝑵 𝑼𝑷"
         android:textColor="@color/colorAccent"
         android:textSize="20sp"
